--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html,body {
 }
 
 #card {
-	background-color: #393B45;
+	background-color: #2D0084;
 	height: auto;
 	width: 350px;
 	margin: 10vh auto;
